--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,11 +68,23 @@ header {
   font-size: var(--title-size);
 }
 
+main {
+  width: 100%;
+}
+
+#asn-section-card {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .asn-main-card {
+  flex: 1;
   background: #283142;
   border-radius: 10px;
   padding: 30px 10px;
   margin: 40px 10px;
+  max-width: 900px;
 }
 
 .asn-card-title {
@@ -90,4 +102,43 @@ header {
   border: none;
   border: 2px solid #384459;
   background: #1b2531;
+  color: #9aaabe;
+  font-size: var(--regular-size);
+}
+
+table {
+  margin-top: 16px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--white);
+}
+
+thead {
+  font-size: 1rem;
+  height: 74px;
+  font-weight: 400;
+}
+
+tbody {
+  font-size: 14px;
+  font-weight: 400;
+}
+
+th,
+td {
+  padding: 0 16px;
+}
+
+tr {
+  margin: 10px;
+}
+
+.data576 {
+  display: none;
+}
+
+@media screen {
 }
